Fix vertical scrollbar issue

--- a/src/style/overrides/_phone.scss
+++ b/src/style/overrides/_phone.scss
@@ -249,7 +249,10 @@
         left: unset;
 
         &:before {
-          width: 512px;
+          width: 280px;
+          height: 280px;
+          left: 50%;
+          // display: none;
         }
 
         img {
